changed css to stop successful creation text off screen

--- a/kps/app/assets/stylesheets/application.css
+++ b/kps/app/assets/stylesheets/application.css
@@ -39,8 +39,8 @@ html, body {
    }
    
    p{
-   	padding-top: -10px;
-   	margin-top: -10px;
+   	padding-top: 0px;
+   	margin-top: 0px;
 	color:#000000
    }
 
